--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,15 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Learning about speech recognition and machine learning
+email: myemail
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I'm a PhD student in linguistics at the University of Arizona, working on automatic speech recognition. This blog is some of what I'm learning along the way.
+
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: sladkoezhnik
+github_username:  JRMeyer
 
 # Build settings
 markdown: kramdown
