--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,11 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Learning about speech recognition and machine learning
-email: myemail
+title: Learning about Speech Recognition and Machine Learning
 description: > # this means to ignore newlines until "baseurl:"
   I'm a PhD student in linguistics at the University of Arizona, working on automatic speech recognition. This blog is some of what I'm learning along the way.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: sladkoezhnik
 github_username:  JRMeyer
 
