changed some settings for latex to work

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ twitter_username: sladkoezhnik
 github_username:  JRMeyer
 
 # Build settings
-markdown: kramdown
+markdown: redcarpet
 
 # use pygments over rouge
 highlighter: pygments
