--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ github_username:  JRMeyer
 
 # Build settings
 markdown: redcarpet
+redcarpet:
  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 # use pygments over rouge
 highlighter: pygments
