--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,6 @@ github_username:  JRMeyer
 # Build settings
 markdown: redcarpet
 redcarpet:
- extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+ extensions: [tables]
 # use pygments over rouge
 highlighter: pygments
