changed pygments to rouge because i got a compile warning

--- a/_config.yml
+++ b/_config.yml
@@ -17,5 +17,4 @@ markdown: kramdown
 # markdown: redcarpet
 # redcarpet:
 #  extensions: [tables]
-# use pygments over rouge
-highlighter: pygments
+highlighter: rouge
