i caved and took out mermaid and just added the graph as a png

--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,8 @@ markdown: kramdown
 
 # syntax highlighter
 highlighter: rouge
+
+gems: [jekyll-mermaid]
+
+mermaid:
+  src: '/js/mermaid.full.min.js'
