--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Learning about Speech Recognition and Machine Learning
+title: Learning about Speech Recognition and Natural Language Processing
 description: My name is Josh Meyer, and I'm a PhD student in linguistics at the University of Arizona working on automatic speech recognition. This blog is some of what I'm learning along the way.
 
 twitter_username: sladkoezhnik
