facebook video not displaying for some reason, commented it out

--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Josh Meyer's Blog
-description: I'm a PhD student in linguistics at the University of Arizona working on automatic speech recognition. This blog is some of what I'm learning along the way.
+title: Josh Meyer's Website
+description: I'm a PhD student in computational linguistics at the University of Arizona working on automatic speech recognition. This blog is some of what I'm learning along the way.
 
 twitter_username: sladkoezhnik
 github_username: JRMeyer
