--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Josh Meyer's Website
 description: I'm a PhD student in computational linguistics at the University of Arizona working on automatic speech recognition. This blog is some of what I'm learning along the way.
 
-twitter_username: sladkoezhnik
+twitter_username: joshmeyerphd
 github_username: JRMeyer
 
 # Build settings
