--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Josh Meyer's Website
-description: I'm a PhD student in computational linguistics at the University of Arizona working on automatic speech recognition. This blog is some of what I'm learning along the way.
+description: I'm an NSF Graduate Research Fellow and PhD student at the University of Arizona working on automatic speech recognition, NLP, and machine learning. This blog is some of what I'm learning along the way. All opinions are my own.
 
 twitter_username: joshmeyerphd
 github_username: JRMeyer
