--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Josh Meyer's Website
 description: I'm an NSF Graduate Research Fellow and PhD candidate at the University of Arizona. I work on automatic speech recognition, NLP, and machine learning. This blog is some of what I'm learning along the way. All opinions are my own.
 
-twitter_username: joshmeyerphd
+twitter_username: _josh_meyer_
 github_username: JRMeyer
 
 # Build settings
