--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Josh Meyer's Website
-description: I'm an NSF Graduate Research Fellow and PhD candidate at the University of Arizona. I work on automatic speech recognition, NLP, and machine learning. This blog is some of what I'm learning along the way. All opinions are my own.
+description: Hi! My name's Josh and I work on Automatic Speech Recognition, Text-to-Speech, NLP, and Machine Learning. This blog is some of what I'm learning along the way. All opinions are my own.
 
 twitter_username: _josh_meyer_
 github_username: JRMeyer
